--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
   }
-  .form-label {
+  form-label {
     font-family: 'Montserrat', sans-serif;
   }
   header {
