--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,18 @@ body {
     margin: 0;
     padding: 0;
   }
-  form-label {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 48px;
-  }
+    form-group {
+      display: flex;
+      align-items: center;
+    }
+    form-group label {
+      flex-basis: 100px; /* Adjust the width of the label as needed */
+    }
+    form-group input {
+      flex-grow: 1;
+      height: 100%; /* Set the input height to match the label height */
+      padding: 5px; /* Adjust the padding as needed */
+    }  
   header {
     background-color: #ffaf87;
     padding: 10px;
